--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
+# Disable pgsql docker manager by quarkus
 quarkus.devservices.enabled=false
 
+# Datasource configuration
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=cobaia
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/adopet
 quarkus.datasource.jdbc.max-size=16
 
-quarkus.hibernate-orm.database.generation = drop-and-create
+# Database manager
+%dev.quarkus.hibernate-orm.sql-load-script=import.sql
+#quarkus.hibernate-orm.database.generation = drop-and-create
+quarkus.flyway.migrate-at-start=true
