--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,28 @@
-# Disable pgsql docker manager by quarkus
-quarkus.devservices.enabled=false
+## Disable pgsql docker manager by quarkus
+%dev.quarkus.devservices.enabled=false
 
-# Datasource configuration
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=postgres
-quarkus.datasource.password=cobaia
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/adopet
-quarkus.datasource.jdbc.max-size=16
+## Datasource configuration ##
+%dev.quarkus.datasource.db-kind=postgresql
+%dev.quarkus.datasource.username=postgres
+%dev.quarkus.datasource.password=cobaia
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/adopet
+%dev.quarkus.datasource.jdbc.min-size=5
+%dev.quarkus.datasource.jdbc.max-size=50
+%dev.quarkus.hibernate-orm.log.sql=true
+%dev.quarkus.hibernate-orm.database.default-schema=adopet
+#%dev.quarkus.hibernate-orm.sql-load-script=import.sql
+#%dev.quarkus.hibernate-orm.database.generation = drop-and-create
 
-# Database manager
-%dev.quarkus.hibernate-orm.sql-load-script=import.sql
-#quarkus.hibernate-orm.database.generation = drop-and-create
-quarkus.flyway.migrate-at-start=true
+## Flyway configurations ##
+# Run flyway on startup app.
+%dev.quarkus.flyway.migrate-at-start=true
+
+# Run repair
+#%dev.quarkus.flyway.repair-at-start=true
+
+# Run on k8s
+#%dev.quarkus.kubernetes.externalize-init=false
+
+# Run on Openshift
+#%dev.quarkus.openshift.externalize-init=false
+
