Feat: Tutor Implements Controller.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 %dev.quarkus.datasource.jdbc.min-size=5
 %dev.quarkus.datasource.jdbc.max-size=50
 %dev.quarkus.hibernate-orm.log.sql=true
-%dev.quarkus.hibernate-orm.database.default-schema=adopet
+#%dev.quarkus.hibernate-orm.database.default-schema=adopet
 #%dev.quarkus.hibernate-orm.sql-load-script=import.sql
 #%dev.quarkus.hibernate-orm.database.generation = drop-and-create
 
