--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 %dev.quarkus.datasource.jdbc.max-size=50
 %dev.quarkus.hibernate-orm.log.sql=true
 #%dev.quarkus.hibernate-orm.database.default-schema=adopet
-#%dev.quarkus.hibernate-orm.sql-load-script=import.sql
+%dev.quarkus.hibernate-orm.sql-load-script=import.sql
 #%dev.quarkus.hibernate-orm.database.generation = drop-and-create
 
 ## Flyway configurations ##
