--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@
 %dev.quarkus.datasource.db-kind=postgresql
 %dev.quarkus.datasource.username=postgres
 %dev.quarkus.datasource.password=cobaia
-%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/adopet
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db_adopet
 %dev.quarkus.datasource.jdbc.min-size=5
 %dev.quarkus.datasource.jdbc.max-size=50
 %dev.quarkus.hibernate-orm.log.sql=true
-#%dev.quarkus.hibernate-orm.database.default-schema=adopet
-%dev.quarkus.hibernate-orm.sql-load-script=import.sql
+#%dev.quarkus.hibernate-orm.database.default-schema=public
+#%dev.quarkus.hibernate-orm.sql-load-script=import.sql
 #%dev.quarkus.hibernate-orm.database.generation = drop-and-create
 
 ## Flyway configurations ##
@@ -20,9 +20,8 @@
 # Run repair
 #%dev.quarkus.flyway.repair-at-start=true
 
-# Run on k8s
+# Run flyway on k8s
 #%dev.quarkus.kubernetes.externalize-init=false
 
-# Run on Openshift
+# Run flyway on Openshift
 #%dev.quarkus.openshift.externalize-init=false
-
